--- a/src/form.html
+++ b/src/form.html
@@ -60,7 +60,7 @@
     </header>
 
     <main class="page-main  page-main__form">
-      <div class="heading  page-main__heading">
+      <div class="heading  heading__form  page-main__heading">
         <h2 class="heading__title  heading__title--size">Оставьте свой отзыв</h2>
         <p class="heading__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
@@ -95,7 +95,7 @@
           </h3>
 
           <label class="feedback-form__label  feedback-form__label--phone">
-              <span class="feedback-form__text">
+              <span class="feedback-form__text  feedback-form__text--margin">
                 <span class="feedback-form__text--hidden">Контактный </span>телефон:
               </span>
               <div class="feedback-form__input-wrapper  feedback-form__input-wrapper--phone">
@@ -104,7 +104,7 @@
           </label>
 
           <label class="feedback-form__label  feedback-form__label--email">
-              <span class="feedback-form__text">Электронная почта:</span>
+              <span class="feedback-form__text  feedback-form__text--margin">Электронная почта:</span>
               <div class="feedback-form__input-wrapper  feedback-form__input-wrapper--email">
                 <input class="feedback-form__input  feedback-form__input--email" type="email" name="email" placeholder="Введите e-mail" required>
               </div>
@@ -173,10 +173,11 @@
         </div>
 
         <button class="feedback-form__btn  btn" type="submit">Отправить отзыв</button>
+        <span class="feedback-form__required">* — обязательные поля</span>
       </form>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-footer  page-footer__form">
       <span class="page-footer__hashtag">#Visitsedona</span>
 
       <div class="social-icons  page-footer__social-icons">
