--- a/src/index.html
+++ b/src/index.html
@@ -60,15 +60,15 @@
     </header>
 
     <main class="page-main">
-      <div class="heading  page-main__heading">
+      <div class="heading  page-main__heading  heading--padding">
         <h2 class="heading__title">Седона — небольшой городок в аризоне, заслуживающий большего!</h2>
-        <p class="heading__text">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
+        <p class="heading__text  heading__text--height">Рассмотрим 5 причин, по которым Седона круче чем гранд каньон!</p>
       </div>
 
       <div class="reason">
         <div class="reason__features  reason__features--bg  reason__features--bg-triangle">
           <h3 class="reason__title  reason__title--color">Настоящий городок</h3>
-          <span class="reason__text  reason__text--color">— №1 —</span>
+          <span class="reason__text  reason__text--color  reason__text--number">— №1 —</span>
           <p class="reason__text  reason__text--color">Седона не атракцион для туристов, там течет своя жизнь</p>
         </div>
 
@@ -81,27 +81,27 @@
         </figure>
       </div>
 
-      <div class="reason  reason__wrapper">
-        <div class="reason__item">
+      <div class="reason  reason__offers">
+        <div class="reason__item  reason__item--houses">
           <h3 class="reason__title  reason__title--houses">Жилье</h3>
-          <p class="reason__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          <p class="reason__text  reason__text--margin">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </div>
 
-        <div class="reason__item">
+        <div class="reason__item  reason__item--souvenirs">
           <h3 class="reason__title  reason__title--souvenirs">Сувениры</h3>
-          <p class="reason__text">Не только китайского, но и местного производства!</p>
+          <p class="reason__text  reason__text--margin">Не только китайского, но и местного производства!</p>
         </div>
 
-        <div class="reason__item">
+        <div class="reason__item  reason__item--foods">
           <h3 class="reason__title  reason__title--foods">Еда</h3>
-          <p class="reason__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <p class="reason__text  reason__text--margin">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
       </div>
 
       <div class="reason">
         <div class="reason__features  reason__features--bg  reason__features--right">
           <h3 class="reason__title  reason__title--color">Там есть мост дьявола</h3>
-          <span class="reason__text  reason__text--color">— №2 —</span>
+          <span class="reason__text  reason__text--color  reason__text--number">— №2 —</span>
           <p class="reason__text  reason__text--color">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
         </div>
 
@@ -117,19 +117,19 @@
       <div class="reason__wrapper">
         <div class="reason  reason--bg-gray">
           <h3 class="reason__title">Небольшая площадь</h3>
-          <span class="reason__text">— №3 —</span>
+          <span class="reason__text  reason__text--number">— №3 —</span>
           <p class="reason__text">Все достопримечательности находятся очень близко</p>
         </div>
 
         <div class="reason  reason--bg-gray">
           <h3 class="reason__title">Красивая дорога</h3>
-          <span class="reason__text">— №4 —</span>
+          <span class="reason__text  reason__text--number">— №4 —</span>
           <p class="reason__text">Ехать в седону из лас-вегаса совсем не скучно!</p>
         </div>
 
         <div class="reason  reason--bg-gray">
           <h3 class="reason__title">Мало туристов</h3>
-          <span class="reason__text">— №5 —</span>
+          <span class="reason__text  reason__text--number">— №5 —</span>
           <p class="reason__text">Большинство едет в гранд каньон и толпится там</p>
         </div>
       </div>
