--- a/src/photo.html
+++ b/src/photo.html
@@ -75,7 +75,7 @@
     </header>
 
     <main class="page-main  page-main__photo">
-      <div class="heading  page-main__heading">
+      <div class="heading  heading__photo  page-main__heading">
         <h2 class="heading__title  heading__title--size">Фото и видео</h2>
         <p class="heading__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
