--- a/src/form.html
+++ b/src/form.html
@@ -203,8 +203,8 @@
 
       <p class="copyright  page-footer__copyright">
         Разработанно:
-        <a class="copyright__link" href="https://htmlacademy.ru">
-          HTML Academy
+        <a class="copyright__link" href="https://github.com/MishaChernov">
+          Михаил Чернов
           <svg class="copyright__img" width="18" height="14">
             <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-htmlacademy"></use>
           </svg>
